tests/kyverno/resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-svc
  namespace: tenant-a-workloads
spec:
  selector: {app: task}
  ports:
    - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
  namespace: tenant-a-workloads
spec:
  type: NodePort
  selector: {app: task}
  ports:
    - port: 80
      nodePort: 30080
